--- a/index.html
+++ b/index.html
@@ -10,31 +10,32 @@
 <body>
     <div class="panels">
         <div class="panel panel1">
-            <p>Always</p>
-            <p>Be</p>
-            <p>Yourself</p>
+            <p>Take</p>
+            <p>All</p>
+            <p>Positives</p>
         </div>
         <div class="panel panel2">
-            <p>Value</p>
-            <p>Your</p>
-            <p>Time</p>
+            <p>Yes</p>
+            <p>You</p>
+            <p>Can</p>
         </div>
         <div class="panel panel3">
-            <p>Dreams</p>
-            <p>Come</p>
-            <p>True</p>
+            <p>Everyone</p>
+            <p>Need</p>
+            <p>Change</p>
         </div>
         <div class="panel panel4">
-            <p>Do</p>
-            <p>It</p>
-            <p>Now</p>
+            <p>Change</p>
+            <p>Is</p>
+            <p>Good</p>
         </div>
         <div class="panel panel5">
-            <p>Celebrate</p>
-            <p>All</p>
-            <p>Success</p>
+            <p>Live</p>
+            <p>Love</p>
+            <p>Laugh</p>
         </div>
     </div>
+    <script src="/main.js"></script>
 </body>
 
 </html>
